syntax = "proto3";

package user.v1;

message UserSummary {
  string user_id = 1;
  string nickname = 2;
  bool active = 3;
}